--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,11 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+# Indentation override for go files
+[*.go]
+indent_size = 4
+indent_style = tab
+
 # Trailing space override for markdown file
 [*.md]
 trim_trailing_whitespace = false
